// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonEndIcon > should pass additional props to FontAwesomeIcon > expected html 1`] = `
<div
  aria-label="end-icon"
  class="ms-1"
>
  "spinner"
</div>
`;

exports[`ButtonEndIcon > should render FontAwesomeIcon with the correct classes > expected html 1`] = `
<div
  class="ms-1 custom-class"
>
  "spinner"
</div>
`;

exports[`ButtonStartIcon > should pass additional props to FontAwesomeIcon > expected html 1`] = `
<div
  aria-label="start-icon"
  class="me-1"
>
  "spinner"
</div>
`;

exports[`ButtonStartIcon > should render FontAwesomeIcon with the correct classes > expected html 1`] = `
<div
  class="me-1 custom-class"
>
  "spinner"
</div>
`;
